# slopdrop

./: .containerignore  .envrc  .gitignore  AUDIT_RESULTS.md  CURRENT_STATUS.md  Cargo.toml  Containerfile  FRONTEND_GUIDE.md  HTTP_LIMITS.md  IMPLEMENTATION_STATUS.md  LINKRESOLVER.md  MULTI_FRONTEND_DESIGN.md  OOM_PROTECTION.md  PUBLIC_DEPLOYMENT_SECURITY.md  QUICKSTART.md  README.md  README_NEW.md  SESSION_SUMMARY.md  SESSION_SUMMARY_MULTI_FRONTEND.md  STATUS.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  TEST_COVERAGE_REPORT.md  TEST_SUMMARY.md  TODO.md  config.toml.example  container-build.sh  container-run.sh  default.nix  flake.nix  shell.nix
examples/: README.md  cli_session.sh  curl_examples.sh  multi_frontend_demo.sh  tui_demo.sh  web_api_client.js  web_api_client.py
src/: config.rs  file_watcher.rs  frontend.rs  hostmask.rs  http_commands.rs  http_tcl_commands.rs  irc_client.rs  irc_formatting.rs  lib.rs  main.rs  main_multi.rs  smeggdrop_commands.rs  state.rs  stock_commands.rs  tcl_plugin.rs  tcl_service.rs  tcl_thread.rs  tcl_wrapper.rs  types.rs  validator.rs
src/frontends/: cli.rs  mod.rs  tui.rs  web.rs
tcl/: cache.tcl  encoding.tcl  http.tcl  linkresolver.tcl  linkresolver_examples.tcl  magick.tcl  proc_tracking.tcl  restore_missing_vars.tcl  sha1.tcl  stock.tcl  stock_wrappers.tcl  stocks.tcl  timers.tcl  timtom.tcl  triggers.tcl  utils.tcl
tests/: README.md  README_ERGO_SETUP.md  comprehensive_tests.sh  encoding_utils_tests.rs  http_module_tests.rs  linkresolver_tests.rs  live_irc_integration_tests.rs  live_irc_tests.rs  output_pagination_tests.rs  pm_notification_tests.rs  repl_environment_tests.rs  run_integration_tests.sh  setup_ergo.sh  state_persistence_tests.rs  tcl_evaluation_tests.rs  tcl_service_tests.rs  test_config.toml  trigger_timer_tests.rs  web_frontend_tests.rs
tests/ergo/: test-ircd.yaml  test-motd.txt
