[package]
name = "slopdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
irc = "1.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tcl = { git = "https://github.com/oooutlk/tcltk", package = "tcl" }
futures = "0.3"
sha1 = "0.10"
