[package]
name = "slopdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
irc = "1.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tcl = { git = "https://github.com/oooutlk/tcltk", package = "tcl" }
futures = "0.3"
sha1 = "0.10"
git2 = "0.18"
ureq = { version = "2", features = ["json"] }
base64 = "0.21"
chrono = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3"
